--- a/Moon17/Moon17.csproj
+++ b/Moon17/Moon17.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="TimeConvertingLibrary">
+      <HintPath>..\..\TimeConvertingLibrary\TimeConvertingLibrary\bin\Release\TimeConvertingLibrary.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
